src/pages/reference/nodejs/v0/http/http.mdx
export const description =
  "Reference for Nitric's Node.js library - Creates a HTTP proxy for wrapping web frameworks."

# Node.js - http()

Creates a new HTTP proxy, which can be used for wrapping other web frameworks. The example below shows wrapping an express application.

```javascript
import { http } from '@nitric/sdk'
import express from 'express'

const app = express()
const port = 3000

app.get('/', (req, res) => {
  res.send('Hello World!')
})

http(app, port, () => {
  console.log(`Application listening on port ${port}`)
})
```

## Parameters

<Properties>
  <Property name="app" required type="NodeApplication">
    Accepts an object that has a listen function on it. The listen function
    accepts a port and an optional callback.
  </Property>
  <Property name="port" required type="number">
    The port that the application will listen on.
  </Property>
  <Property name="callback" type="() => void">
    A callback that is run when the application is started.
  </Property>
</Properties>

## Examples

Before testing or deploying these applications you'll need to make sure you have a `nitric.yaml` file in the base of the project.

```yaml
name: project-name
handlers:
  - functions/*.ts
```

### Wrap a Nest.js application

For a Nest application, point your handler at the `main.ts` file.

```yaml
name: project-name
handlers:
  - src/main.ts
```

```javascript
import { http } from '@nitric/sdk'
import { NestFactory } from '@nestjs/core'
import { AppModule } from './app.module'

const port = 3000

async function listen(port: number) {
  const app = await NestFactory.create(AppModule)
  await app.listen(port)
}

http({ listen }, port, () => {
  console.log(`Application listening on port ${port}`)
})
```

### Wrap an Express application

```javascript
import { http } from '@nitric/sdk'
import express from 'express'

const app = express()
const port = 3000

app.get('/', (req, res) => {
  res.send('Hello World!')
})

http(app, port, () => {
  console.log(`Application listening on port ${port}`)
})
```

### Wrap a Koa application

```javascript
import { http } from '@nitric/sdk'
import Koa from 'koa'

const app = new Koa()
const port = 3000

app.use(async (ctx) => {
  ctx.body = 'Hello World'
})

http(app, port, () => {
  console.log(`Application listening on port ${port}`)
})
```
